Be consistent using example_id as part of PUT url
